fix: colors for dark mode only

--- a/apps/frontend/src/assets/styles/global.scss
+++ b/apps/frontend/src/assets/styles/global.scss
@@ -166,7 +166,7 @@ html {
   --landing-raw-bg: #fff;
 
   --medal-promotion-bg: #fff;
-  --medal-promotion-orange: #a86f35;
+  --medal-promotion-orange: #c08a3a;
 
   --banner-error-bg: #fee2e2;
   --banner-error-text: #991b1b;
@@ -305,7 +305,7 @@ html {
   --landing-raw-bg: #000;
 
   --medal-promotion-bg: #000;
-  --medal-promotion-orange: #b3600c54;
+  --medal-promotion-orange: #FFB84B54;
 
   --hover-filter: brightness(120%);
   --active-filter: brightness(140%);
